sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:9: error: ')' expected but '}' found.
  }
  ^